Time: 14 ms (45.27%), Space: 55.4 MB (35.04%) - LeetHub